# mazassumnida

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
api/: fonts.py  images.py  urls.py  utils.py  views.py
mazassumnida/: asgi.py  settings.py  urls.py  wsgi.py
