[tool.poetry]
name = "mazassumnida"
version = "0.1.0"
description = "Mazassumnida is badge generation project for ps community"
authors = ["Jaeyeol Lee <rijgndqw012@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1"
requests = "^2.24.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
