[tool.poetry]
name = "mazassumnida"
version = "0.1.0"
description = "Mazassumnida is badge generation project for ps community"
authors = ["Jaeyeol Lee <rijgndqw012@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1"
requests = "^2.24.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mazassumnida", "api"]

[project]
name = "mazassumnida"
version = "0.1.0"
description = "Mazassumnida is badge generation project for ps community"
authors = [
    { name="Jaeyeol Lee", email="rijgndqw012@gmail.com" }
]
dependencies = [
    "django>=3.1,<4.0",
    "requests>=2.24.0,<3.0.0",
    "gunicorn>=20.0.4,<21.0.0",
    "cloudscraper>=1.2.71",
]
requires-python = ">=3.7"
